Fix Dark mode for titles

--- a/_sass/_solo.scss
+++ b/_sass/_solo.scss
@@ -193,6 +193,9 @@ pre > code {
     background-color: #444;
     color: #e4e4e4;
   }
+  h1 {
+    color: #e4e4e4;
+  }
   a {
     color: #e39777;
   }
